--- a/source/sass/blocks/cards-section.scss
+++ b/source/sass/blocks/cards-section.scss
@@ -1,16 +1,18 @@
 .cards-section {
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 65px;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
 
-  @media (min-width: $desktop-width) {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
+    @media (max-width: $tablet-width) {
+      grid-template-columns: 1fr 1fr;
+      margin-top: 65px;
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 100%;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
   }
 
   .cards-section__photo {
@@ -33,15 +35,25 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      max-width: 100%;
+      width: 100%;
       max-height: 80px;
       background-color: $grey-color;
       padding: 0;
     }
 
     @media (min-width: $desktop-width) {
-      background-color: #000000;
-      opacity: 0.3;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      z-index: 2;
+      background-color: rgba(0, 0, 0, 0.3);
+      color: $white-color;
+    }
+  }
+
+  .cards-section__square {
+    @media (min-width: $desktop-width) {
+      position: relative;
     }
   }
 
@@ -59,7 +71,9 @@
   }
 
   .cards-section__icon {
-    opacity: 0.3;
+    @media (max-width: $mobile-width-only) {
+      opacity: 0.3;
+    }
 
     @media (min-width: $tablet-width) {
       padding-top: 28px;
@@ -82,10 +96,4 @@
       padding-right: 21px;
     }
   }
-
-  // @media (min-width: $desktop-width) {
-  //   // width: 100%;
-  //   // grid-template-columns: 1fr 1fr 1fr;
-  //   // grid-template-rows: 400px 267px;
-  // }
 }
