--- a/source/sass/blocks/inscription.scss
+++ b/source/sass/blocks/inscription.scss
@@ -2,21 +2,50 @@
   text-align: center;
   margin-top: 40px;
   letter-spacing: 1px;
-  padding-right: 13px;
-  padding-left: 20px;
+
+  @media (max-width: $mobile-width-only) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    min-height: 252px;
+
+    &::after {
+      content: "";
+      display: block;
+      background-size: cover;
+      background-position: bottom;
+      background-image: url("../img/bg-triangle.svg");
+      position: absolute;
+      width: 100%;
+      height: 37px;
+      bottom: -36px;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
-
-    padding-bottom: 52.5px;
-    padding-top: 43.5px;
   }
 }
 
 .inscription__slogan {
   @include font-titles-black;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 20%;
+    padding-right: 20%;
+
+    br {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 26%;
+    padding-right: 26%;
+  }
 }
 
 .inscription__text {
@@ -25,4 +54,10 @@
   margin: 0;
   padding-top: 26px;
   letter-spacing: 1px;
+
+  @media (min-width: $tablet-width) {
+    br {
+      display: none;
+    }
+  }
 }
