--- a/source/sass/blocks/road-card.scss
+++ b/source/sass/blocks/road-card.scss
@@ -25,3 +25,18 @@
     color: $white-color;
   }
 }
+
+.road-card__img-wrapper {
+  @media (min-width: $tablet-width) {
+    position: relative;
+    height: 267px;
+    overflow: hidden;
+    margin: 0;
+  }
+}
+
+.road-card__image {
+  @media (min-width: $tablet-width) {
+    width: 100%;
+  }
+}
