--- a/source/sass/blocks/cards-section.scss
+++ b/source/sass/blocks/cards-section.scss
@@ -16,13 +16,15 @@
   }
 
   .cards-section__photo {
-    padding-top: 24px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 9px;
+    @media (max-width: $mobile-width-only) {
+      padding-top: 24px;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-bottom: 9px;
 
-    @media (min-width: $desktop-width) {
-      padding: 0;
+      @media (min-width: $desktop-width) {
+        padding: 0;
+      }
     }
   }
 
@@ -67,6 +69,7 @@
 
   .cards-section__review {
     display: flex;
+    flex-direction: row;
     padding-top: 7px;
   }
 
@@ -87,8 +90,32 @@
   .cards-section__like-count {
     margin: 0;
     font-weight: bold;
-    padding-left: 15px;
     padding-top: 3px;
+    padding-left: 40px;
+    position: relative;
+
+    &::before {
+      background-image: url("../img/icon-like.svg");
+
+      content: "";
+      position: absolute;
+      background-repeat: no-repeat;
+      background-position: center;
+
+      @media (max-width: $mobile-width-only) {
+        width: 23px;
+        height: 21px;
+        top: 0px;
+        left: 0px;
+      }
+
+      @media (min-width: $tablet-width) {
+        width: 23px;
+        height: 21px;
+        top: 40%;
+        left: -25px;
+      }
+    }
 
     @media (min-width: $tablet-width) {
       padding-top: 30px;
