--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -7,8 +7,8 @@
 }
 
 .page-header__logo {
-  height: 56px;
   text-align: center;
+  height: 56px;
   order: 2;
   z-index: 2;
 
@@ -20,5 +20,12 @@
     z-index: 1;
     left: 50%;
     transform: translateX(-50%);
+  }
+
+  img {
+    @media (min-width: $desktop-width) {
+      width: 187px;
+      height: 97px;
+    }
   }
 }
