--- a/source/sass/blocks/road-card.scss
+++ b/source/sass/blocks/road-card.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: #eaeaea;
+    background-color: rgba(234, 234, 234, 1);
   }
 
   @media (min-width: $desktop-width) {
