--- a/source/sass/blocks/bridge-item.scss
+++ b/source/sass/blocks/bridge-item.scss
@@ -71,5 +71,14 @@
 .bridge-item__photo {
   width: 100%;
   position: relative;
-  bottom: 35%;
+  bottom: 20%;
+}
+
+.bridge-item__photo-wrapper {
+  margin: 0;
+  overflow: hidden;
+
+  @media (max-width: $mobile-width-only) {
+    height: 260px;
+  }
 }
