--- a/source/sass/blocks/city-item.scss
+++ b/source/sass/blocks/city-item.scss
@@ -69,3 +69,12 @@
     }
   }
 }
+
+.city-item__photo-wrapper {
+  margin: 0;
+  overflow: hidden;
+
+  @media (max-width: $mobile-width-only) {
+    height: 260px;
+  }
+}
