--- a/source/sass/blocks/facilities.scss
+++ b/source/sass/blocks/facilities.scss
@@ -11,48 +11,49 @@
   }
 }
 
-.facilities__item-first {
-  @media (max-width: $mobile-width-only) {
-    margin-top: 30px;
-    padding-left: 21px;
-  }
-
-  @media (min-width: $tablet-width) {
-    grid-area: living;
-  }
-}
-
 .facilities__slogan {
   margin: 0;
   padding-top: 15px;
 }
 
-.facilities__item-second {
+.facilities__item {
   @media (max-width: $mobile-width-only) {
-    padding-top: 26px;
     padding-left: 21px;
   }
 
-  @media (min-width: $tablet-width) {
-    grid-area: syvenirs;
+  &:first-child {
+    @media (max-width: $mobile-width-only) {
+      margin-top: 30px;
+    }
+
+    @media (min-width: $tablet-width) {
+      grid-area: living;
+    }
+  }
+
+  &:nth-child(2) {
+    @media (max-width: $mobile-width-only) {
+      padding-top: 26px;
+    }
+
+    @media (min-width: $tablet-width) {
+      grid-area: syvenirs;
+    }
+  }
+
+  &:last-child {
+    @media (max-width: $mobile-width-only) {
+      padding-top: 28px;
+      margin-bottom: 36px;
+    }
+
+    @media (min-width: $tablet-width) {
+      grid-area: food;
+    }
   }
 }
 
-.facilities__item-third {
-  @media (max-width: $mobile-width-only) {
-    padding-top: 28px;
-    padding-left: 21px;
-    margin-bottom: 36px;
-  }
-
-  @media (min-width: $tablet-width) {
-    grid-area: food;
-  }
-}
-
-.facilities__section-first,
-.facilities__section-second,
-.facilities__section-third {
+.facilities__section {
   @media (max-width: $mobile-width-only) {
     display: flex;
     flex-direction: row;
@@ -127,7 +128,7 @@
   }
 }
 
-.facilities__text-house {
+.facilities__text {
   @media (max-width: $mobile-width-only) {
     padding-left: 9px;
   }
