--- a/source/sass/blocks/intro-background.scss
+++ b/source/sass/blocks/intro-background.scss
@@ -18,7 +18,7 @@
     position: absolute;
     width: 100%;
     height: 57px;
-    bottom: -1px;
+    bottom: 0;
   }
 
   @media (min-width: $tablet-width) {
