--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -40,7 +40,7 @@
     position: absolute;
     width: 100%;
     height: 57px;
-    bottom: -1px;
+    bottom: 0;
 
     @media (min-width: $tablet-width) {
       background-image: url("../img/bg-intro-triangle-tablet.svg");
@@ -48,6 +48,7 @@
 
     @media (min-width: $desktop-width) {
       background-image: url("../img/bg-intro-triangle-desktop.svg");
+      bottom: -1px;
     }
   }
 }
