--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -2,3 +2,32 @@
   width: 100%;
   height: 320px;
 }
+
+.map {
+  @media (max-width: $mobile-width-only) {
+    height: 350px;
+  }
+}
+
+.map {
+  picture {
+    top: 0;
+    left: 0;
+    z-index: 1;
+    position: relative;
+    margin: 0;
+  }
+}
+
+.map {
+  iframe {
+    position: absolute;
+    z-index: 2;
+
+    border: none;
+
+    @media (max-width: $mobile-width-only) {
+      height: 350px;
+    }
+  }
+}
