--- a/source/sass/blocks/search-section.scss
+++ b/source/sass/blocks/search-section.scss
@@ -6,11 +6,13 @@
 
 .search-section__text {
   @media (max-width: $mobile-width-only) {
-    padding-top: 13px;
+    margin-top: 33px;
   }
 
   @media (min-width: $tablet-width) {
     margin-top: 58px;
+    padding-left: 20%;
+    padding-right: 20%;
   }
 
   p {
@@ -30,12 +32,23 @@
 }
 
 .search-section__subtitle {
+  text-align: center;
+
   @media (max-width: $mobile-width-only) {
     line-height: 24px;
-    text-align: center;
     padding-top: 22px;
     padding-right: 22px;
     padding-left: 22px;
+
+    br {
+      display: none;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-top: 22px;
+    padding-right: 12px;
+    padding-left: 14px;
   }
 }
 
