--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -96,6 +96,18 @@
     font-size: 14px;
     line-height: 26px;
   }
+
+  @media (max-width: $mobile-width-only) {
+    li {
+      border-top: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+      border-bottom: 1px solid rgba($color: #010101, $alpha: 0.2);
+
+      &:last-child {
+        border-bottom: none;
+        box-shadow: inset 0 -8px 10px -6px rgba($color: #000000, $alpha: 0.4);
+      }
+    }
+  }
 }
 
 .main-nav__wrapper {
