--- a/source/sass/blocks/impressions-fieldset.scss
+++ b/source/sass/blocks/impressions-fieldset.scss
@@ -11,3 +11,30 @@
   @include font-titles-black;
   text-transform: none;
 }
+
+.choice {
+  display: flex;
+}
+
+.choice-block__label {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  &::before {
+    display: inline-block;
+    content: "";
+    width: 18px;
+    height: 18px;
+    border: 15px solid #eeeeee;
+    border-radius: 25px;
+    margin-right: 26px;
+  }
+
+  .choice-block__input + &::before {
+    background-color: #eeeeee;
+  }
+
+  .choice-block__input:checked + &::before {
+    background-color: #333333;
+  }
+}
