--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -29,5 +29,9 @@
     @media (max-width: $mobile-width-only) {
       height: 350px;
     }
+
+    @media (min-width: $tablet-width) {
+      height: 350px;
+    }
   }
 }
