--- a/source/sass/blocks/comments-fieldset.scss
+++ b/source/sass/blocks/comments-fieldset.scss
@@ -1,14 +1,21 @@
-.comments-fieldset__legend {
-  text-align: center;
-
+.comments-fieldset__title {
   @include font-titles-black;
+  text-align: center;
+  margin: 0;
 
-  padding-top: 20px;
-  padding-bottom: 15px;
+  @media (min-width: $tablet-width) {
+    @include titles-form-desktop;
+  }
 }
 
 .comments-fieldset {
   border: 0 none;
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    grid-area: comments;
+  }
 }
 
 .comments-fieldset__input {
@@ -17,9 +24,13 @@
   font-size: 18px;
   line-height: 26px;
   border: none;
-  padding-left: 21px;
-  padding-right: 23px;
-  min-height: 160px;
-  margin-left: 19px;
-  margin-right: 22px;
+  width: 100%;
+
+  @media (max-width: $mobile-width-only) {
+    padding-left: 21px;
+    padding-right: 23px;
+    min-height: 160px;
+    margin-left: 19px;
+    margin-right: 22px;
+  }
 }
