--- a/source/sass/blocks/contacts-fieldset.scss
+++ b/source/sass/blocks/contacts-fieldset.scss
@@ -1,15 +1,25 @@
 .contacts-fieldset {
   border: 0 none;
-  border-bottom: 1px solid #e5e5e5;
+
+  @media (max-width: $mobile-width-only) {
+    border-bottom: 1px solid #e5e5e5;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    margin: 0;
+    grid-area: contacts;
+  }
 }
 
-.contacts-fieldset__legend {
-  font-weight: bold;
-
+.contacts-fieldset__title {
   @include font-titles-black;
-
   text-align: center;
-  padding-top: 16px;
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    @include titles-form-desktop;
+  }
 }
 
 .contacts-fieldset__phone {
