--- a/source/sass/blocks/impression-choice.scss
+++ b/source/sass/blocks/impression-choice.scss
@@ -6,14 +6,17 @@
   display: flex;
   align-items: center;
   width: 100%;
+  font-weight: bold;
+  text-transform: none;
+  font-size: 18px;
 
   &::before {
     display: inline-block;
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 24px;
+    height: 24px;
     border: 15px solid #eeeeee;
-    border-radius: 25px;
+    border-radius: 30px;
     margin-right: 26px;
 
     .impression-choice__input + & {
