--- a/source/sass/blocks/introduce-fieldset.scss
+++ b/source/sass/blocks/introduce-fieldset.scss
@@ -1,13 +1,37 @@
 .introduce-fieldset {
   border: 0 none;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #e5e5e5;
+
+  @media (max-width: $mobile-width-only) {
+    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 10px;
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-area: introduce;
+    padding: 0;
+    margin: 0;
+    border-left: 1px solid #e5e5e5;
+    padding-top: 28px;
+  }
 }
 
-.introduce-fieldset__legend {
-  @include font-titles-black;
-  text-align: center;
-  padding-top: 16px;
+.introduce-fieldset__section {
+  @media (min-width: $tablet-width) {
+    padding-left: 56px;
+  }
+}
+
+.introduce-fieldset__title {
+  margin: 0;
+
+  @media (max-width: $mobile-width-only) {
+    @include font-titles-black;
+    text-align: center;
+  }
+
+  @media (min-width: $tablet-width) {
+    @include titles-form-desktop;
+  }
 }
 
 .first-name__input,
@@ -25,39 +49,107 @@
 .first-name__label,
 .last-name__label,
 .middle-name__label {
-  line-height: 26px;
+  @media (max-width: $mobile-width-only) {
+    line-height: 26px;
+  }
 }
 
 // Стили для расположения секций форм
 
 .first-name__label {
-  padding-left: 8px;
+  @media (max-width: $mobile-width-only) {
+    padding-left: 8px;
+  }
+
+  @media (min-width: $tablet-width) {
+    align-self: center;
+  }
 }
 
 .last-name__label {
-  padding-left: 7px;
+  @media (max-width: $mobile-width-only) {
+    padding-left: 7px;
+  }
+
+  @media (min-width: $tablet-width) {
+    align-self: center;
+  }
 }
 
 .middle-name__label {
-  padding-left: 7px;
+  @media (max-width: $mobile-width-only) {
+    padding-left: 7px;
+  }
+
+  @media (min-width: $tablet-width) {
+    align-self: center;
+  }
 }
 
+.introduce-fieldset__first-name {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 55px;
+  }
+}
+
+.introduce-fieldset__last-name {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 18px;
+  }
+}
+
+.introduce-fieldset__middle-name {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 18px;
+  }
+}
 // Поле для заполнения
 
 .first-name__input {
-  margin-top: 15px;
-  margin-left: 10px;
-  margin-bottom: 21px;
-  padding-right: 21px;
+  @media (max-width: $mobile-width-only) {
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 21px;
+    padding-right: 21px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 216px;
+    margin-left: 10px;
+    padding-left: 25px;
+  }
 }
 
 .last-name__input {
-  width: 192px;
-  margin-bottom: 15px;
-  margin-left: 10px;
+  @media (max-width: $mobile-width-only) {
+    width: 192px;
+    margin-bottom: 15px;
+    margin-left: 10px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-left: 15px;
+    margin-left: 7px;
+  }
 }
 
 .middle-name__input {
-  width: 192px;
-  margin-left: 10px;
+  @media (max-width: $mobile-width-only) {
+    width: 192px;
+    margin-left: 10px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-left: 15px;
+    margin-left: 7px;
+  }
 }
