--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -14,6 +14,10 @@
   min-width: 230px;
   min-height: 58px;
   font-weight: bold;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+  }
 }
 
 .phone-block__icon {
