--- a/source/sass/blocks/place-choice.scss
+++ b/source/sass/blocks/place-choice.scss
@@ -6,6 +6,9 @@
   display: flex;
   align-items: center;
   width: 100%;
+  font-weight: bold;
+  text-transform: none;
+  font-size: 18px;
 
   &::before {
     display: inline-block;
