--- a/source/sass/blocks/review-form.scss
+++ b/source/sass/blocks/review-form.scss
@@ -1,3 +1,19 @@
 .review-form__submit-button {
   @include style-btn;
 }
+
+.review-form {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "impressions introduce"
+      "contacts contacts"
+      "places places"
+      "comments comments";
+
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
