--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -8,7 +8,7 @@
   @media (min-width: $tablet-width) {
     grid-area: places;
     margin: 0;
-    padding: 0;
+    padding-top: 49px;
     justify-self: center;
   }
 }
