--- a/source/sass/blocks/email.scss
+++ b/source/sass/blocks/email.scss
@@ -13,6 +13,7 @@
 
   @media (min-width: $tablet-width) {
     width: 100%;
+    padding-left: 23px;
   }
 }
 
@@ -28,4 +29,8 @@
 
 .email__label {
   line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 22px;
+  }
 }
