--- a/source/sass/blocks/review-form.scss
+++ b/source/sass/blocks/review-form.scss
@@ -1,7 +1,3 @@
-.review-form__submit-button {
-  @include style-btn;
-}
-
 .review-form {
   @media (min-width: $tablet-width) {
     display: grid;
@@ -15,5 +11,25 @@
 
     margin-left: 60px;
     margin-right: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 120px;
+    margin-right: 120px;
+    grid-template-rows: 1fr auto auto 1fr;
+  }
+}
+
+.review-form__submit-button {
+  @include style-btn;
+
+  @media (min-width: $desktop-width) {
+    min-width: 324px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 480px;
+    padding-top: 5px;
   }
 }
