--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -19,36 +19,39 @@
     padding-right: 36px;
   }
 }
-
 .social__item {
+  white-space: nowrap;
+  text-indent: 100%;
+  margin-right: 6px;
+}
+
+.social__link {
+  display: block;
   width: 46px;
   height: 48px;
   background-color: $main-color;
   text-align: center;
+  position: relative;
+  overflow: hidden;
+  text-indent: 100%;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+
+    svg {
+      fill: rgba($color: #ffffff, $alpha: 0.3);
+    }
+  }
 }
 
 .social__img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   fill: $white-color;
-}
-
-.twitter-item {
-  margin-right: 6px;
-  width: 47px;
-  height: 48px;
-}
-
-.twitter-icon {
-  margin-top: 16px;
-}
-
-.facebook-item {
-  margin-right: 6px;
-}
-
-.facebook-icon {
-  margin-top: 13px;
-}
-
-.youtube-icon {
-  margin-top: 17px;
 }
