--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -34,7 +34,7 @@
   line-height: 26px;
   font-weight: bold;
   text-transform: uppercase;
-  width: 280px;
+  min-width: 280px;
   min-height: 58px;
   background-color: $main-color;
   color: $white-color;
@@ -52,7 +52,7 @@
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 49px;
-  width: 458px;
+  min-width: 458px;
   min-height: 58px;
   background-color: $main-color;
   color: $white-color;
