--- a/source/sass/blocks/introduce-fieldset.scss
+++ b/source/sass/blocks/introduce-fieldset.scss
@@ -1,21 +1,26 @@
 .introduce-fieldset {
   border: 0 none;
+  padding: 0;
+  margin: 0;
 
   @media (max-width: $mobile-width-only) {
     border-bottom: 1px solid #e5e5e5;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
   }
 
   @media (min-width: $tablet-width) {
     grid-area: introduce;
-    padding: 0;
-    margin: 0;
     border-left: 1px solid #e5e5e5;
     padding-top: 28px;
   }
 }
 
 .introduce-fieldset__section {
+  @media (max-width: $mobile-width-only) {
+    margin-top: 22px;
+    padding-left: 13px;
+  }
+
   @media (min-width: $tablet-width) {
     padding-left: 56px;
   }
@@ -61,10 +66,6 @@
 // Стили для расположения секций форм
 
 .first-name__label {
-  @media (max-width: $mobile-width-only) {
-    padding-left: 8px;
-  }
-
   @media (min-width: $tablet-width) {
     align-self: center;
   }
@@ -91,6 +92,11 @@
 }
 
 .introduce-fieldset__first-name {
+  @media (max-width: $mobile-width-only) {
+    margin-left: 7px;
+    margin-top: 5px;
+  }
+
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
@@ -104,6 +110,10 @@
 }
 
 .introduce-fieldset__last-name {
+  @media (max-width: $mobile-width-only) {
+    padding-top: 18px;
+  }
+
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
@@ -132,22 +142,19 @@
 
 .first-name__input {
   @media (max-width: $mobile-width-only) {
-    width: 100%;
+    min-width: 205px;
     margin-top: 15px;
     margin-left: 10px;
-    margin-bottom: 21px;
-    padding-right: 21px;
+    padding-left: 22px;
   }
 
   @media (min-width: $tablet-width) {
-    // width: 216px;
     width: 100%;
     margin-left: 14px;
     padding-left: 25px;
   }
 
   @media (min-width: $desktop-width) {
-    // width: 216px;
     width: 100%;
     margin-left: 13px;
     padding-left: 22px;
@@ -156,10 +163,9 @@
 
 .last-name__input {
   @media (max-width: $mobile-width-only) {
-    // width: 192px;
-    width: 100%;
     margin-bottom: 15px;
-    margin-left: 10px;
+    margin-left: 11px;
+    padding-left: 12px;
   }
 
   @media (min-width: $tablet-width) {
@@ -171,8 +177,6 @@
 
 .middle-name__input {
   @media (max-width: $mobile-width-only) {
-    // width: 192px;
-    width: 100%;
     margin-left: 10px;
   }
 
