--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -47,6 +47,19 @@
 // icon
 
 @media (max-width: $mobile-width-only) {
+  .main-nav__icon-menu {
+    display: block;
+    fill: $main-color;
+
+    &:hover {
+      fill: #81b3d2;
+    }
+
+    &:active {
+      fill: rgba($color: #81b3d2, $alpha: 0.3);
+    }
+  }
+
   .main-nav__icon-menu,
   .main-nav__icon-cross {
     width: 23px;
@@ -56,11 +69,6 @@
   .main-nav__icon-cross {
     display: none;
     fill: $white-color;
-  }
-
-  .main-nav__icon-menu {
-    display: block;
-    fill: $main-color;
   }
 
   .main-nav__button--closed .main-nav__icon-menu,
