--- a/source/sass/blocks/player.scss
+++ b/source/sass/blocks/player.scss
@@ -22,13 +22,12 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     padding-left: 25px;
+    padding-top: 25px;
   }
 
   @media (min-width: $tablet-width) {
-    img {
-      margin-left: auto;
-      margin-right: auto;
-    }
+    padding-top: 35px;
+    padding-left: 35px;
   }
 }
 
@@ -42,13 +41,11 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     justify-content: space-around;
+    padding-top: 25px;
   }
 
   @media (min-width: $tablet-width) {
-    img {
-      margin-left: auto;
-      margin-right: auto;
-    }
+    padding-top: 35px;
   }
 }
 
@@ -62,12 +59,40 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     justify-content: space-around;
+    padding-top: 25px;
   }
 
   @media (min-width: $tablet-width) {
-    img {
-      margin-left: auto;
-      margin-right: auto;
+    padding-top: 35px;
+  }
+}
+
+.player__replay-icon,
+.player__subtitles-icon,
+.player__fullscreen-icon {
+  // Стили по styleguide
+  @media (max-width: $mobile-width-only) {
+    fill: #5c6870;
+
+    &:hover {
+      fill: #333333;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    fill: $white-color;
+
+    &:hover {
+      fill: #ffffff;
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
     }
   }
 }
